Prepping for initial deploy

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 <div id="post">
+
+<h2>{{ page.title }}</h2>
+<p class="meta">{{ page.date | date_to_string }} - New York</p>
+
 {{ content }}
 </div>
 
