minor config tweaks

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -36,7 +36,7 @@
 			<div class="span6 offset6">
 		      	<ul class="nav nav-pills">
 				  <li>
-					<a href="/about/" title="about adam">about adam</a>
+					<a href="/about.html" title="about adam">about adam</a>
 				  </li>
 				  <li>
 					<a href="#moreinfo">more info »</a>
