--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@ layout: outer
 				<div class="row">
 					<div class="span3">
 					<small>
-						Adam R Neary<br />
+						<strong>Adam R Neary</strong><br />
 						Founder &amp CEO of <a href="http://profitably.com/">Profitably</a><br />
 						adam@neary.com
 					</small>
