--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -14,9 +14,7 @@
 	    <![endif]-->
 
 		<!-- styles -->
-		<link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-		<link rel="stylesheet" href="/css/custom.css" type="text/css" media="screen, projection" />
-		<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/packaged_css_20120604.css" type="text/css" />
 		
 		<link rel="shortcut icon" href="/images/headshot.jpg" />
 		<link rel="alternate" type="application/rss+xml" title="adam r neary RSS Feed" href="http://feeds.feedburner.com/adamrneary/GeOR" />
@@ -53,7 +51,7 @@
 	<p />
 
   </div> <!--exterior-->
-	 <script src="/js/bootstrap.js"></script>
+	 <script src="/assets/packaged_js_20120604"></script>
 	</body>
 </html>
 
