now cdn urls will work once they are set up and put in the _config file

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -14,7 +14,7 @@
 	    <![endif]-->
 
 		<!-- styles -->
-		<link rel="stylesheet" href="/assets/packaged_css_20120604.css" type="text/css" />
+		<link rel="stylesheet" href="{{'assets/packaged_css_20120604.css' | cdn}}" type="text/css" />
 		
 		<link rel="shortcut icon" href="/images/headshot.jpg" />
 		<link rel="alternate" type="application/rss+xml" title="adam r neary RSS Feed" href="http://feeds.feedburner.com/adamrneary/GeOR" />
@@ -51,7 +51,7 @@
 	<p />
 
   </div> <!--exterior-->
-	 <script src="/assets/packaged_js_20120604"></script>
+	 <script src="{{'assets/packaged_js_20120604.js' | cdn}}"></script>
 	</body>
 </html>
 
