now all image assets are pointing to cdn url

--- a/_layouts/wide.html
+++ b/_layouts/wide.html
@@ -42,14 +42,14 @@ layout: outer
 					</small>
 					</div>
 					<div class="span6">
-						<a class="pull-right" href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="/images/rss_47.png" alt="Subscribe to RSS Feed" /></a>					
+						<a class="pull-right" href="http://feeds.feedburner.com/adamrneary/GeOR"><img src="{{'images/rss_47.png' | cdn}}" alt="Subscribe to RSS Feed" /></a>					
 					</div>
 				</div> <!--footer row 1-->
 
 				<hr class="soften">
 
 				<div class="row">
-					<a class="pull-right" rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" src="/images/creative_commons_88x31.png" /></a>
+					<a class="pull-right" rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" src="{{'images/creative_commons_88x31.png' | cdn}}" /></a>
 					<small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.<br>
 					Ideas expressed here are mine alone and do not represent Profitably, its investors, my beautiful wife, or any other institution.<br/>...or do they?</small>
 				</div>
